--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     </head>
     <body>
         <h1>
-            buna ziua lume !!
+            buna ziua lume 2 !!
         </h1>
     </body>
 </html>
