--- a/siteul meu.html
+++ b/siteul meu.html
@@ -5,6 +5,8 @@
 </title>
     </head>
     <body>
+        <h1>Heading 1</h1>
+        <h6>Heading 6</h6>
     <a href="http://www.w3schools.com">Text pe care se da click</a>
     </body>
 </html>
