--- a/siteul meu.html
+++ b/siteul meu.html
@@ -7,6 +7,9 @@
     <body>
         <h1>Heading 1</h1>
         <h6>Heading 6</h6>
-    <a href="http://www.w3schools.com">Text pe care se da click</a>
+        <p>un paragraf</p>
+        <div>un div</div>
+        <span>un span</span>
+    <a href="http://www.w3schools.com" id="test">Text pe care se da click</a>
     </body>
 </html>
