tema cu linkuri

--- a/tema/Three Poets Home page.html
+++ b/tema/Three Poets Home page.html
@@ -12,16 +12,20 @@
     <table >
         <tr>     
             <td >
-                    <a href="file:///C:/scoalainformala/scoalainformala/scoalainformala/tema/Three%20Poets.html"><input type="button" value="Home        " /></a>
+                    <a href="https://pravatmihaigabriel.github.io/scoalainformala/tema/Three%20Poets%20Home%20page.html">
+                        <input type="button" value="Home        " /></a>
                     <br />
                     <br />
-                    <a href="file:///C:/scoalainformala/scoalainformala/scoalainformala/tema/Three%20Poets%20Longfellow.html"><input type="button" value="Longfellow" /></a>
+                    <a href="https://pravatmihaigabriel.github.io/scoalainformala/tema/Three%20Poets%20Longfellow.html">
+                        <input type="button" value="Longfellow" /></a>
                     <br />
                     <br />
-                    <a href="https://ro.lipsum.com/"><input type="button" value="Poe           " /></a>
+                    <a href="https://pravatmihaigabriel.github.io/scoalainformala/tema/Three%20Poets%20Poe.html">
+                        <input type="button" value="Poe           " /></a>
                     <br />
                     <br />
-                    <a href="https://ro.lipsum.com/"><input type="button" value="Whitman   " /></a>
+                    <a href="https://pravatmihaigabriel.github.io/scoalainformala/tema/Three%20Poets%20Whitman.html">
+                        <input type="button" value="Whitman   " /></a>
                     <br />
                     <br />
             </td>
