--- a/tema/Three Poets Whitman.html
+++ b/tema/Three Poets Whitman.html
@@ -12,19 +12,23 @@ Henry Wadsworth Longfellow
     <table >
         <tr>     
             <td >
-                    <a href="https://ro.lipsum.com/"><input type="button" value="Home        " /></a>
-                    <br />
-                    <br />
-                    <a href="https://ro.lipsum.com/"><input type="button" value="Longfellow" /></a>
-                    <br />
-                    <br />
-                    <a href="https://ro.lipsum.com/"><input type="button" value="Poe           " /></a>
-                    <br />
-                    <br />
-                    <a href="https://ro.lipsum.com/"><input type="button" value="Whitman   " /></a>
-                    <br />
-                    <br />
-            </td>
+                <a href="https://pravatmihaigabriel.github.io/scoalainformala/tema/Three%20Poets%20Home%20page.html">
+                    <input type="button" value="Home        " /></a>
+                <br />
+                <br />
+                <a href="https://pravatmihaigabriel.github.io/scoalainformala/tema/Three%20Poets%20Longfellow.html">
+                    <input type="button" value="Longfellow" /></a>
+                <br />
+                <br />
+                <a href="https://pravatmihaigabriel.github.io/scoalainformala/tema/Three%20Poets%20Poe.html">
+                    <input type="button" value="Poe           " /></a>
+                <br />
+                <br />
+                <a href="https://pravatmihaigabriel.github.io/scoalainformala/tema/Three%20Poets%20Whitman.html">
+                    <input type="button" value="Whitman   " /></a>
+                <br />
+                <br />
+        </td>
             <td >
 
                     <img src="whitman.png">
