--- a/tema/Three Poets Contact page.html
+++ b/tema/Three Poets Contact page.html
@@ -31,17 +31,22 @@
             </td>
             <td >
 
-                <h1><strong>Welcome</strong></h1>
-                <p>This site is a tribute to three poets.</p>
+                <h1><strong>Contact</strong></h1>
                 <br />
-                <ul>
-                        <li><a href="L">Henry Wadsworth Longfellow</a></li>
-                        <br />
-                        <li><a href="P">Edgar Allan Poe</a></li>
-                        <br />
-                        <li><a href="W">Walt Whitman</a></li>
-                        <br />
-                </ul>   
+                <label>Name (optional):</label><br />
+                <input type="text" />
+                <br />
+                <br />
+                <label>Email (optional):</label><br />
+                <input type="text" />
+                <br />
+                <br />
+                <label>Message (required):</label><br />
+                <textarea></textarea>
+                <br />
+                <br />
+                <input type="button" value="Send   " /></a>
+                <br />  
             </td>
         </tr>
         <tr>
@@ -51,7 +56,7 @@
         <tr>
                 <td></td>
                 <td>@ Nobody at all 2010 | <a href="">Contact</a></td>
-        </tr>   
+        </tr>
     </table>
 </body>
 
