--- a/tema/Web design v1.html
+++ b/tema/Web design v1.html
@@ -8,7 +8,7 @@
 <body>
     <table border="1" cellspacing="0">
         <tr>     
-            <td >
+            <td valign="top">
                     <div  style="background: rgb(137, 235, 135); color: rgb(255, 98, 0); font-size:36px;" align="center">
                         BUY A 
                         
