--- a/bucuresti/bucuresti contact page.html
+++ b/bucuresti/bucuresti contact page.html
@@ -16,17 +16,12 @@
         <tr>     
             <td valign="center">
                    
-                        <input type="button" value="         Home         "  href="bucuresti home page.html"/>
+                    <a href="bucuresti home page.html"><input type="button" value="         Home         "/></a><br />
                     <br />
-                    <br />
-                        <input type="button" value=" Bucuresti de Vis " href="bucuresti de vis.html"/>
-                    <br />
-                    <br />
-                        <input type="button" value="Piste de biciclete " href="biciclete.html"/>
-                    <br />
-                    <br />
-                        <input type="button" value="         Parcari        " href="parcari.html"/>
-                    <br />
+                    <a href="bucuresti de vis.html"><input type="button" value=" Bucuresti de Vis " /></a><br /><br />
+                     <a href="biciclete.html">
+                        <input type="button" value="Piste de biciclete " /></a><br /><br />
+                     <a  href="parcari.html"><input type="button" value="         Parcari        "/></a><br />
                     <br />
             </td>
             <td>
