--- a/bucuresti/bucuresti contact page.html
+++ b/bucuresti/bucuresti contact page.html
@@ -19,9 +19,9 @@
                     <a href="bucuresti home page.html"><input type="button" value="         Home         "/></a><br />
                     <br />
                     <a href="bucuresti de vis.html"><input type="button" value=" Bucuresti de Vis " /></a><br /><br />
-                     <a href="Biciclete.html">
+                     <a href="pista biciclete.html">
                         <input type="button" value="Piste de biciclete " /></a><br /><br />
-                     <a  href="Parcari.html"><input type="button" value="         Parcari        "/></a><br />
+                     <a  href="parcari naspa.html"><input type="button" value="         Parcari        "/></a><br />
                     <br />
             </td>
             <td>
