--- a/bucuresti/bucuresti contact page v1.html
+++ b/bucuresti/bucuresti contact page v1.html
@@ -14,7 +14,7 @@
     <hr />
     <table style="width:500px">
         <tr>     
-            <td valign="center">
+            <td valign="top">
                    
                     <a href="bucuresti home page.html"><input type="button" value="         Home         "/></a><br />
                     <br />
@@ -49,7 +49,7 @@
         </tr>
         <tr>
                 <td></td>
-                <td>@ Nobody at all 2010 | <a href="bucuresti contact page.html">Contact</a></td>
+                <td>@ Nobody at all 2010 | <a href="bucuresti contact page v1.html">Contact</a></td>
         </tr>   
     </table>
 </body>
