--- a/bucuresti/bucuresti home page.html
+++ b/bucuresti/bucuresti home page.html
@@ -14,20 +14,14 @@
     <hr />
     <table style="width:1000px">
         <tr>     
-            <td valign="center">
+            <td valign="top">
                    
-                        <input type="button" value="         Home         "  href="bucuresti home page.html"/>
-                    <br />
-                    <br />
-                        <input type="button" value=" Bucuresti de Vis " href="bucuresti de vis.html"/>
-                    <br />
-                    <br />
-                        <input type="button" value="Piste de biciclete " href="biciclete.html"/>
-                    <br />
-                    <br />
-                        <input type="button" value="         Parcari        " href="parcari.html"/>
-                    <br />
-                    <br />
+                <a href="bucuresti home page.html"><input type="button" value="         Home         "/></a><br />
+                <br />
+                <a href="bucuresti de vis.html"><input type="button" value=" Bucuresti de Vis " /></a><br /><br />
+                 <a href="pista biciclete.html">
+                    <input type="button" value="Piste de biciclete " /></a><br /><br />
+                 <a  href="parcari naspa.html"><input type="button" value="         Parcari        "/></a><br />
             </td>
             <td >
 
@@ -37,9 +31,9 @@
                 <ul>
                         <li><a href="bucuresti de vis.html">Bucuresti de vis</a></li>
                         <br />
-                        <li><a href="biciclete.html">Piste de biciclete</a></li>
+                        <li><a href="pista biciclete.html">Piste de biciclete</a></li>
                         <br />
-                        <li><a href="parcari.html">Parcari</a></li>
+                        <li><a href="parcari naspa.html">Parcari</a></li>
                         <br />
                 </ul>   
             </td>
@@ -50,7 +44,7 @@
         </tr>
         <tr>
                 <td></td>
-                <td>@ Nobody at all 2010 | <a href="bucuresti contact page.html">Contact</a></td>
+                <td>@ Nobody at all 2010 | <a href="bucuresti contact page v1.html">Contact</a></td>
         </tr>   
     </table>
 </body>
