--- a/bucuresti/pista biciclete.html
+++ b/bucuresti/pista biciclete.html
@@ -14,21 +14,16 @@
     <hr />
     <table style="width:1000px">
         <tr>     
-            <td valign="center">
+            <td valign="top">
                    
-                        <input type="button" value="         Home         "  href="bucuresti home page.html"/>
-                    <br />
-                    <br />
-                        <input type="button" value=" Bucuresti de Vis " href="https://pravatmihaigabriel.github.io/scoalainformala/tema/Three%20Poets%20Longfellow.html"/>
-                    <br />
-                    <br />
-                        <input type="button" value="Piste de biciclete " href="https://pravatmihaigabriel.github.io/scoalainformala/tema/Three%20Poets%20Poe.html"/>
-                    <br />
-                    <br />
-                        <input type="button" value="         Parcari        " href="https://pravatmihaigabriel.github.io/scoalainformala/tema/Three%20Poets%20Whitman.html"/>
-                    <br />
-                    <br />
-            </td>
+                <a href="bucuresti home page.html"><input type="button" value="         Home         "/></a><br />
+                <br />
+                <a href="bucuresti de vis.html"><input type="button" value=" Bucuresti de Vis " /></a><br /><br />
+                 <a href="pista biciclete.html">
+                    <input type="button" value="Piste de biciclete " /></a><br /><br />
+                 <a  href="parcari naspa.html"><input type="button" value="         Parcari        "/></a><br />
+                <br />
+        </td>
             <td valign="center" align="center">
 
                    <a href="biciclete1.jpg"><img src="biciclete1.jpg" height="275:px" width="400:px" border="1"></a>
@@ -49,7 +44,7 @@
         </tr>
         <tr>
                 <td></td>
-                <td>@ Nobody at all 2010 | <a href="bucuresti contact page.html">Contact</a></td>
+                <td>@ Nobody at all 2010 | <a href="bucuresti contact page v1.html">Contact</a></td>
     </table>
 </body>
 
