--- a/bucuresti/parcari naspa.html
+++ b/bucuresti/parcari naspa.html
@@ -14,20 +14,14 @@
     <hr />
     <table style="width:1000px">
         <tr>     
-            <td valign="center">
+            <td valign="top">
                    
-                        <input type="button" value="         Home         "  href="bucuresti home page.html"/>
-                    <br />
-                    <br />
-                        <input type="button" value=" Bucuresti de Vis " href="https://pravatmihaigabriel.github.io/scoalainformala/tema/Three%20Poets%20Longfellow.html"/>
-                    <br />
-                    <br />
-                        <input type="button" value="Piste de biciclete " href="https://pravatmihaigabriel.github.io/scoalainformala/tema/Three%20Poets%20Poe.html"/>
-                    <br />
-                    <br />
-                        <input type="button" value="         Parcari        " href="https://pravatmihaigabriel.github.io/scoalainformala/tema/Three%20Poets%20Whitman.html"/>
-                    <br />
-                    <br />
+                <a href="bucuresti home page.html"><input type="button" value="         Home         "/></a><br />
+                <br />
+                <a href="bucuresti de vis.html"><input type="button" value=" Bucuresti de Vis " /></a><br /><br />
+                 <a href="pista biciclete.html">
+                    <input type="button" value="Piste de biciclete " /></a><br /><br />
+                 <a  href="parcari naspa.html"><input type="button" value="         Parcari        "/></a><br />
             </td>
             <td valign="center" align="center">
 
