--- a/lectia 3/wikipedia.html
+++ b/lectia 3/wikipedia.html
@@ -4,13 +4,30 @@
     <title>
         Wikipedia
     </title>
+    <style> 
+    strong {
+        background-color: blue;
+        color: white;
+    }
+    a { background-color: rgb(110, 226, 15)
+    }
+    .bigger { font-size: 20px;}
+    #D{text-decoration: underline}
+    </style>
 </head>
 <body>
-   <h1>
-    <em>
-    Lycoperdon perlatum  
-    </em>   
-   </h1>
+        <h1 style="
+        border: 17px solid black;
+        padding: 20px;
+        border-left: 50px;
+        box-sizing: content-box;
+        width: 300px;
+        background-color: #1c69f7;
+    ">
+        <em>
+        Lycoperdon perlatum  
+        </em>   
+       </h1>
    <hr/>
    <span>From Wikipedia, the free encyclopedia</span><br/><br/>
    <div>
@@ -23,9 +40,9 @@
        <a href="https://en.wikipedia.org/wiki/Puffball">puffball</a>
        <ol>
             <li><a href="#T">Taxonomy</a></li>
-            <li><a href="#D">Description</a></li>
+            <li><a class="bigger" href="#D">Description</a></li>
             <li><a href="#S">Similar species</a></li>
-            <li><a href="#E">Ecology and distribution</a></li>
+            <li><a class="bigger" href="#E">Ecology and distribution</a></li>
             <li><a href="#C">Chemistry</a></li>
             <li><a href="#R">References</a></li>
             <li><a href="#E1">External links</a></li>
