--- a/lectia 3/wikipedia.html
+++ b/lectia 3/wikipedia.html
@@ -5,15 +5,9 @@
         Wikipedia
     </title>
     <style> 
-    strong {
-        background-color: blue;
-        color: white;
-    }
-    a { background-color: rgb(110, 226, 15)
-    }
-    .bigger { font-size: 20px;}
-    #D{text-decoration: underline}
+   
     </style>
+    <link rel="stylesheet" href="stil.css" />
 </head>
 <body>
         <h1 style="
