--- a/Javascript lectia 3/formular.html
+++ b/Javascript lectia 3/formular.html
@@ -24,6 +24,9 @@
             if (validarenumepren(elemPrenume.value)<3){
                 elemParola1.style.backgroundColor="red";
             }else { elemParola1.style.backgroundColor="";};
+            if (elemTermeni.check= {
+                elemParola.style.backgroundColor="red";
+            }else { elemParola.style.backgroundColor="";};
             console.log(elemPrenume.value);
             console.log(elemParola.value);
             console.log(elemParola1.value);
