--- a/Javascript lectia 3/4 butoane.html
+++ b/Javascript lectia 3/4 butoane.html
@@ -21,10 +21,22 @@
 </head>
 
 <body>
-   <input text="botton" name="Buton1">
-   <input text="botton" name="Buton1">
-   <input text="botton" name="Buton1">
-   <input text="botton" name="Buton1">
+   <input text="button" name="Buton1" value="Tab1" onclick="showTab(0)">
+   <input text="button" name="Buton1" value="Tab2" onclick="showTab(1)">
+   <input text="button" name="Buton1" value="Tab3" onclick="showTab(2)">
+   <input text="button" name="Buton1" value="Tab4" onclick="showTab(3)">
+   <div class="continut">
+       Continut 1
+   </div>
+   <div class="continut">
+        Continut 2
+    </div>
+    <div class="continut">
+            Continut 3
+        </div>
+        <div class="continut">
+                Continut 4
+            </div>
 </body>
 
 </html>
