--- a/Tema Java script/catalog elevi si note.html
+++ b/Tema Java script/catalog elevi si note.html
@@ -30,7 +30,7 @@
             document.getElementById("macarONota").style.display = "flex";
 			var tabel=document.querySelector("#listaNote tbody");
 			var str="";
-            
+            console.log(listaElevi[indexElev].note.length);
 			for(var i=0;i<listaElevi[indexElev].note.length;i++){
 				    str+= `<tr>
 					<td>${listaElevi[indexElev].note[i]}</td>
