--- a/Tema Java script/cos.html
+++ b/Tema Java script/cos.html
@@ -587,7 +587,8 @@ body {
   grid-template-columns: 70px 45px  60px 60px;
   grid-gap: 5px;
   text-align: center;
-  font-size: 11px;
+  font-weight: bold;
+  
   
 }  
 
@@ -597,6 +598,7 @@ body {
  font-weight: bold;
  padding-right: 1px;
  padding-left: 1px;
+ font-size: 11px;
 }
 
 
@@ -607,6 +609,7 @@ body {
   font-weight: bold;
   padding-right: 1px;
  padding-left: 1px;
+ font-size: 11px;
 }
 
 .butonDetalii{
