--- a/Tema Java script/cos.html
+++ b/Tema Java script/cos.html
@@ -57,7 +57,7 @@
       <span class="denumireCos">${cos[i].cantitate}</span>
       <input  class="inchideDetalii1" type="button" value="+" onclick="adauga(${i});"/>
       <span class="denumireCos">${(cos[i].pret*cos[i].cantitate)} lei</span>
-      <input  class="butonDetalii" type="button" value="REMOVE" onclick="remove(${i});"/>
+      <input  class="butonDetalii" type="button" value="STERGE" onclick="remove(${i});"/>
       </div>
       </br>`
      ;}
@@ -278,8 +278,8 @@ body {
 
 .gridCosTitlu {
   display: grid;
-  grid-template-columns: 230px 220px  80px 230px;
-  grid-gap: 10px;
+  grid-template-columns: 220px 205px 80px 270px;
+  grid-gap: 5px;
   text-align: center;
   
 }
