index adauga in cos

--- a/Tema Java script/magazinuldediversecarousel.html
+++ b/Tema Java script/magazinuldediversecarousel.html
@@ -127,7 +127,7 @@
             }
                 else{cos.push(produsNou);
                     
-                    str=`Produsul ${produse[i].denumire} a fost adaugat in cos`;
+                    str=`Produsul ${produse[index].denumire} a fost adaugat in cos`;
                     tabel.innerHTML=str;
                 tabel.classList.remove("produsInCosInvizibil");
                 tabel.classList.add("produsInCosVizibil");
