--- a/Tema Java script/Magazinuldediverseadmin.html
+++ b/Tema Java script/Magazinuldediverseadmin.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
-        <script src="magazinuldediverseadmin.js">
+        <script src="Magazinuldediverseadmin.js">
         </script>    
-    <link rel="stylesheet" href="magazinuldediverseadmin.css">                  
+    <link rel="stylesheet" href="Magazinuldediverseadmin.css">                  
     </head>  
     <body>
            <div id="fereastraMagazin">
